[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geecomposer"
version = "0.1.0"
description = "Lightweight Earth Engine compositing for Sentinel-1 and Sentinel-2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "earthengine-api>=0.1.0",
  "geopandas>=0.14",
  "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "black>=24.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py310"
